# Log-Aggregation-System

./: .gitignore  README.md  test-docker.bat  test-local.bat
agent/: CMakeLists.txt
agent/include/: batcher.hpp  file_tailer.hpp  log_parser.hpp  queue_client.hpp
agent/src/: batcher.cpp  file_tailer.cpp  log_parser.cpp  main.cpp  queue_client.cpp
anomaly/: pyproject.toml  requirements.txt
anomaly/src/: __init__.py  config.py  detector.py  main.py
anomaly/src/db/: alert_repository.py  database.py  log_repository.py
anomaly/src/detectors/: base.py  isolation_forest.py  statistical.py
anomaly/src/features/: extractor.py
anomaly/src/models/: schemas.py
anomaly/src/workers/: polling_worker.py
anomaly/tests/: conftest.py  test_detectors.py  test_isolation_forest.py  test_repositories.py  test_worker.py
api/: eslint.config.js  jest.config.js  package-lock.json  package.json
api/src/: index.ts
api/src/db/: alertRepository.ts  logRepository.ts
api/src/routes/: alerts.ts  logs.ts
api/src/services/: alertService.ts  queueConsumer.ts  queueService.ts
api/src/types/: log.ts
api/src/utils/: logNormalizer.ts  queryHelpers.ts
api/tests/helpers/: testDb.ts
api/tests/unit/db/: alertRepository.test.ts  logRepository.test.ts
api/tests/unit/routes/: alerts.test.ts  logs.test.ts
api/tests/unit/services/: alertService.test.ts  queueConsumer.test.ts  queueService.test.ts
api/tests/unit/utils/: logNormalizer.test.ts  queryHelpers.test.ts
docker/: Dockerfile.agent  Dockerfile.anomaly  Dockerfile.api  Dockerfile.frontend  Dockerfile.queue  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: LogChart.tsx  LogDashboard.tsx  LogSearch.tsx  LogTable.tsx
queue/: CMakeLists.txt
queue/include/: http_server.hpp  persistence.hpp  queue.hpp  sqlite_queue.hpp
queue/src/: http_server.cpp  main.cpp  sqlite_queue.cpp
